# Lyfebl00d

./: .gitignore  Cargo.toml  README.md  database_schema.sql  foundry.toml  migrate_swaps_table.sql  package-lock.json  package.json  paper  performance_report.txt  populate_cg_pools.sql  rustc-ice-2025-09-15T19_33_49-30452.txt  test_missing.rs  test_swap_loading.rs
.github/workflows/: e2e-tests.yml
MDs/: README.md
config/: abi_parse.json  arbitrage_config.json  backtest.json  blockchain_config.json  chains.json  dex_config.json  discovery_config.json  exploit_patterns.yaml  external_config.json  gas_estimates.json  main.json  modules.json  quote_source_config.json  risk_config.json  transaction_optimizer_config.json
contracts/: MockAaveAddressesProvider.sol  MockERC20.sol  MockUniswapV2Factory.sol  MockUniswapV2Pair.sol  MockUniswapV2Router02.sol  UQ112x112.sol  uar.sol
contracts/interfaces/: IBalancerVault.sol  IMockERC20.sol  IMockUniswapV2Factory.sol  IPool.sol  IUniswapV2Pair.sol  IWeth.sol
contracts/utils/: SafeMath.sol
lib/: ERC20PresetMinterPauser.sol
lib/openzeppelin-contracts/contracts/interfaces/: IERC165.sol
lib/openzeppelin-contracts/contracts/token/ERC20/: ERC20.sol  IERC20.sol
lib/openzeppelin-contracts/contracts/token/ERC20/utils/: SafeERC20.sol
lib/openzeppelin-contracts/contracts/utils/: Address.sol  ReentrancyGuard.sol
script/: deploy_uar.sol  requirements.txt
scripts/: analyze_paper_trading.py  arbitrage-refresh.service  cleanup_gas_outliers.sh  query_arbitrage.sh  refresh_arbitrage_view.sh  test_logging.sh
secrets/: production.vault
src/: arbitrage.rs  backtest.rs  blockchain.rs  bridge_health.rs  config.rs  cross.rs  database.rs  decimals.rs  decoder.rs  dex_math.rs  discovery_manager.rs  errors.rs  errors_extended.rs  integration_coordinator.rs  lib.rs  listen.rs  main.rs  mainnet_config.rs  mempool.rs  mempool_stats.rs  metrics.rs  pool_manager.rs  pool_states.rs  pool_type_cache.rs  precision.rs  providers.rs  quote_source.rs  rate_limiter.rs  risk.rs  secrets.rs  secrets_initializer.rs  shared_setup.rs  state.rs  swap_loader.rs  synergy_scorer.rs  token_registry.rs  transaction_optimizer.rs  types.rs  uar_connector.rs  unified_pipeline.rs  (+1 more)
src/alpha/: circuit_breaker.rs  engine.rs  mod.rs  scanner_manager.rs  statistical_utils.rs  types.rs
src/bridges/: adapter.rs
src/contracts/: flashloan_abi.json  oracle_abi.json
src/execution/: builder.rs  mod.rs
src/gas_oracle/: historical_gas_provider.rs  live_gas_provider.rs  mod.rs
src/mev_engine/: contracts.rs  handlers.rs  mod.rs  monitor.rs  types.rs
src/path/: circular_arbitrage.rs  enhanced_heuristics.rs  finder.rs  graph.rs  mod.rs  search.rs  tests.rs  types.rs  utils.rs
src/predict/: CLEANUP_SUMMARY.md  mod.rs  predict.md  predict.rs  predict_benchmark.rs  predict_dependencies.toml  predict_impl.rs  predict_mod.rs  predict_transformer.rs  predict_usage.rs
src/price_oracle/: aggregator_quote_wrapper.rs  historical_price_provider.rs  live_price_provider.rs  mod.rs  types.rs
src/strategies/: SECURITY_IMPROVEMENTS.md  analytics.rs  arbitrage.rs  jit_liquidity.rs  liquidation.rs  mod.rs  sandwich.rs  simulation.rs
src/strategies/discovery/: cross_chain_scanner.rs  cyclic_scanner.rs  event_driven_discovery.rs  market_making_scanner.rs  mod.rs  statistical_scanner.rs  unified_discovery.rs
src/utils/: helpers.rs  mod.rs
test/: test_uar.sol  test_uar_complete.sol
tests/: lib.rs  test_arbitrage_fix_complete.rs  test_backtest_integration.rs  test_backtest_modules.rs  test_db_basic_validation.rs  test_db_validation.rs  test_fuzz.rs  test_gas_auction_trials.rs  test_gas_configuration.rs  test_integration.rs  test_listen.rs  test_mev_strategies.rs  test_path_block_building.rs  test_protocol_coverage.rs  test_reorg_nonce_chaos.rs  test_security_improvements.rs  test_swap_data_flow.rs  test_swap_db.rs
tests/common/: mocks.rs  mod.rs  real_harness.rs
trash/: .backtest_checkpoint_ethereum.json  BACKTEST_IMPROVEMENTS.md  backtest_results.ethereum.json  rustc-ice-2025-08-06T16_52_07-40537.txt  transaction_optimizer_impl.rs
